[metadata]
name = DyphanBot
author = Buzzbyte
description = An Extensible Discord Bot
long_description = file: README.md
url = https://github.com/buzzbyte/DyphanBot
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: GNU Affero General Public License v3
    Development Status :: 3 - Alpha

[options]
packages = find_namespace:
install_requires =
    py-cord[voice] @ git+https://github.com/Pycord-Development/pycord@master
    youtube_dl
    websockets
    requests
    requests_oauthlib
    aiohttp
    aiohttp_session[secure]
    aioauth_client
python_requires = >=3.6
setup_requires =
    setuptools>=42.0
    setuptools-scm>=3.4